--- a/app/container/main/style.module.css
+++ b/app/container/main/style.module.css
@@ -1,5 +1,5 @@
 .main {
-    background: url("../../assets/images/main/bg.jpeg") no-repeat;
+    background: url("../../assets/images/main/main.jpg") no-repeat;
     position: relative;
     background-size: cover;
 }
@@ -8,7 +8,7 @@
     content: "";
     position: absolute;
     background: #0e6397;
-    opacity: 0.5;
+    opacity: 0.7;
     top: 0;
     left: 0;
     width: 100%;
@@ -66,9 +66,14 @@
         font-size: 24px;
         line-height: 40px;
     }
+    
+    .main h1 span {
+        font-size: 32px !important;
+        line-height: 55px;
+    }
 
     .main h3 {
-        font-size: 16px;
+        display: none;
     }
 }
 
