--- a/app/container/tours/style.module.css
+++ b/app/container/tours/style.module.css
@@ -1,29 +1,35 @@
 .tours {
     background: url("../../assets/images/tours/bg.jpeg") no-repeat;
     width: 100%;
-    height: 910px;
+    height: 1000px;
     position: relative;
+    margin-top: 10px;
 }
 
 .tours::after {
     content: "";
     position: absolute;
-    background: #1d87e4;
-    opacity: 0.6;
+    background: #0e6397;
+    opacity: 0.7;
     top: 0;
     left: 0;
     width: 100%;
-    height: 910px;
+    height: 1000px;
     z-index: 1;
 }
 
 .tours img {
     margin-bottom: 30px;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .tours h3 {
-    font-size: 30px;
+    font-size: 40px;
     color: #ffffff;
+    font-weight: 700;
 }
 
 .tours h5 {
@@ -46,13 +52,14 @@
         width: 100%;
         height: 100%;
         position: relative;
+        margin-top: 0;
     }
 
     .tours::after {
         content: "";
         position: absolute;
-        background: #1d87e4;
-        opacity: 0.6;
+        background: #0e6397;
+        opacity: 0.7;
         top: 0;
         left: 0;
         width: 100%;
