--- a/app/container/header/style.module.css
+++ b/app/container/header/style.module.css
@@ -3,3 +3,21 @@
     font-size: 23.24px;
     font-weight: 600;
 }
+
+.header img {
+    width: 150px;
+    height: auto;
+}
+
+@media (max-width: 576px) {
+    .header img {
+        width: 80px;
+        height: auto;
+    }
+
+    .header h4 {
+        color: #FFFFFF;
+        font-size: 20px;
+        font-weight: 600;
+    }
+}
